[tool.poetry]
name = "pythonml"
version = "0.1.0"
description = "my primer proyecto de ml"
authors = ["María Iglesias Suárez <139764939+miglesua@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
jupyter = "^1.0.0"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
